2006-02-07  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/tag/gstvorbistag.c: (gst_tag_from_vorbis_tag),
	(gst_tag_to_vorbis_tag):
	  Make sure we called gst_tag_register_musicbrainz_tags()
	  before possibly mapping a vorbiscomment string from/to a
	  musicbrainz tag.

2006-02-07  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/typefind/gsttypefindfunctions.c: (mp3_type_find):
	  In case we can't find the required number of consecutive
	  mpeg audio frames to positively identify an MPEG audio
	  stream, check if there's at least a valid mpeg audio
	  frame right at offset 0 and if so suggest mpeg/audio
	  caps with a very low probability (#153004).

2006-02-07  Andy Wingo  <wingo@pobox.com>

	* gst/tcp/gsttcpclientsrc.c (gst_tcp_client_src_create): Switch to
	a TIME segment if we get timestamped buffers. Requires recent
	fixes in core to work properly.

2006-02-07  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gstplaybasebin.c: (prepare_output):
	  Don't print the URI as part of the error message, it
	  makes error dialogs look rather ugly, especially if
	  the URI is very long or has characters in it that
	  need escaping.

2006-02-07  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gstplaybasebin.c: (prepare_output):
	  Error out if we have only text or subtitles, but nothing
	  else. Also error out if we have subtitles but no video
	  stream.

2006-02-07  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/gnomevfs/gstgnomevfssrc.c: (gst_gnome_vfs_src_create):
	  Treat GNOME_VFS_RESULT_EOF as EOS, not as error (#329194).
	  Post an error message on the bus when we encounter an
	  error, which will hopefully be more meaningful than the
	  'Internal Flow Error' message users get to see if we
	  just return GST_FLOW_ERROR.

2006-02-07  Andy Wingo  <wingo@pobox.com>

	* configure.ac (GST_MAJORMINOR): Update core version req to
	0.10.2.2, for the collectpads API addition (#330244).
